# srcomp-pystream

./: .gitignore  LICENSE  Makefile  README.md  example.env  example.nginx  pyproject.toml  setup.cfg  srcomp-pystream.service
.github/workflows/: check.yml
sr/comp/pystream/: __main__.py  state.py  stream.py  websocket.py  worker.py
sr/comp/pystream/files/: timesync.js  websocket_demo.html
