[metadata]
name = srcomp_pystream
description = A Python application that gives an EventStream and WebSocket of events from SRComp by wrapping the HTTP API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = "Will Barber"
url = https://github.com/WillB97/srcomp_pystream

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    aiohttp >= 3.8, <4
    aiodns >= 1.1, <2
    aiohttp-sse >= 2, <3

[options.extras_require]
dev =
    flake8
    isort
    mypy
    build

[options.entry_points]
console_scripts =
    srcomp-pystream = sr.comp.pystream.__main__:main
